codepkg/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Agree_to_services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on Enrollment Application and Agreement Capture Form</description>
        <label>Agree to services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <description>needed for Stack functionality</description>
        <label>Facility Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on Enrollment Application and Agreement Capture Form</description>
        <label>Received Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zStack_Case_Age_in_Minutes__c</fullName>
        <description>Time from when first page of zStack is indexed until case is closed</description>
        <formula>(ClosedDate -  zStack_Lookup__r.Time_Accepted_Date__c )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time from when first page of zStack is indexed until case is closed</inlineHelpText>
        <label>Time Indexed to Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zStack_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the parent zStack Record</description>
        <inlineHelpText>Usually first zStack is the one you want to select</inlineHelpText>
        <label>zStack Lookup</label>
        <referenceTo>ZPAPER__zStack__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>